# OpenWarp

./: CMakeLists.txt  flash.sh
binaries/myproject/: firmware.elf
cmake/: boards.cmake  toolchain-arm-cm4.cmake  toolchain-avr.cmake  toolchain-esp32.cmake
examples/SerialTest/: SerialTest.warp
examples/blink/: blink.warp
src/arch/avr/chips/atmega328p/: crt0.s  gpio.c  linker.ld  memory-map.h
src/arch/xtensa-lx6/chips/esp32/: gpio.c  linker.ld  memory-map.h  startup.S  timing.c  uart.c  watchdog.c
src/include/: OpenWarp.h
src/include/source/: master.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h
